chore: finalize docs and accessibility

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -185,6 +185,5 @@
     "snoozeScheduled": "Reminder snoozed for {minutes} minutes.",
     "snoozeUnavailable": "Snooze isn't available for this prayer.",
     "timezoneWarning": "Device timezone differs from the calculation timezone. Check Settings.",
-    "unknownDate": "Unknown date",
-    "localeName": "en"
+    "unknownDate": "Unknown date"
 }
